--- a/base.css
+++ b/base.css
@@ -1,3 +1,59 @@
 body {
     display: flex;
+    flex-direction: column;
+}
+
+.logo {
+    background-color: rgb(185, 184, 184);
+    margin: 3px;
+    display: flex;
+    height: 50px;
+    
+}
+
+.header {
+    background-color: rgb(185, 184, 184);
+    margin: 3px;
+    height: 100px;
+}
+
+.introarea {
+    background-color: rgb(185, 184, 184);
+    margin: 3px;
+    height: 80px;
+}
+
+.boxes {
+    display: flex;
+
+}
+
+.box1 {
+    background-color: rgb(185, 184, 184);
+    margin: 3px;
+    width: 33%;
+    height: 250px;
+    
+}
+
+.box2 {
+    background-color: rgb(185, 184, 184);
+    margin: 3px;
+    width: 33%;
+    height: 250px;
+    
+}
+
+.box3 {
+    background-color: rgb(185, 184, 184);
+    margin: 3px;
+    width: 33%;
+    height: 250px;
+   
+}
+
+.footer {
+    background-color: rgb(185, 184, 184);
+    margin: 3px;
+    height: 50px;
 }
