--- a/base.css
+++ b/base.css
@@ -1,3 +1,47 @@
 body {
     display: flex;
+    flex-direction: column;
+}
+
+.logo {
+    background-color: rgb(202, 202, 202);
+    margin: 3px;
+    height: 70px;
+}
+
+.cluster {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.navigation {
+    background-color:rgb(202, 202, 202);
+    margin: 3px;
+    width: 30%
+}
+
+.headbancol {
+    width: 70%
+}
+
+
+.header {
+    background-color:rgb(202, 202, 202);
+    margin: 3px;
+    height: 150px;
+    
+}
+
+.bodyarea {
+    background-color:rgb(202, 202, 202);
+    margin: 3px;
+    height: 300px;
+}
+
+.footer {
+    background-color:rgb(202, 202, 202);
+    margin: 3px;
+    height: 40px;
 }
