--- a/base.css
+++ b/base.css
@@ -1,3 +1,55 @@
 body {
     display: flex;
+    flex-direction: column;
+}
+
+.logo {
+    background-color: rgb(186, 186, 186);
+    margin: 3px;
+    height: 40px;
+}
+
+.boxcluster {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.box {
+    background-color: rgb(186, 186, 186);
+    margin: 3px;
+    height: 120px;
+    width: 130px;
+    margin: 5px;
+}
+
+.boxrow {
+    display: flex;
+    justify-content: space-between;
+}
+
+.box1 {
+    background-color: rgb(186, 186, 186);
+    margin: 3px;
+    height: 150px;
+    width: 33%;
+}
+.box2 {
+    background-color: rgb(186, 186, 186);
+    margin: 3px;
+    height: 150px;
+    width: 33%;
+}
+
+.box3 {
+    background-color: rgb(186, 186, 186);
+    margin: 3px;
+    height: 150px;
+    width: 33%;
+}
+
+.footer {
+    background-color: rgb(186, 186, 186);
+    margin: 3px;
+    height: 30px;
 }
